#2.1 Setting up VSCode and Python Like a PRO

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "C:\\Users\\Admin\\.virtualenvs\\Airbnb-clone-egV90EX4\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Admin\\.virtualenvs\\Airbnb-clone-egV90EX4\\Scripts\\python.exe",
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
+    "python.formatting.provider": "black",
+    "python.linting.flake8Args": ["--max-line-length=88"]
 }
