--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ requests = "*"
 beautifulsoup4 = "*"
 pillow = "*"
 django-countries = "*"
+django-seed = "*"
 
 [requires]
 python_version = "3.7"
