--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ beautifulsoup4 = "*"
 pillow = "*"
 django-countries = "*"
 django-seed = "*"
+django-dotenv = "*"
 
 [requires]
 python_version = "3.7"
