--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pillow = "*"
 django-countries = "*"
 django-seed = "*"
 django-dotenv = "*"
+django = "==2.2.5"
 
 [requires]
 python_version = "3.7"
