--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,9 @@ dmypy.json
 .pyre/
 uploads/
 node_modules
+
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
