--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "python.pythonPath": "C:\\Users\\Admin\\.virtualenvs\\Airbnb-clone-egV90EX4\\Scripts\\python.exe",
-    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Enabled": false,
     "python.linting.enabled": true,
     "python.formatting.provider": "black",
     "python.linting.flake8Args": [
         "--max-line-length=88"
     ],
-    "python.linting.pylintEnabled": false
+    "python.linting.pylintEnabled": true
 }
