--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -1,10 +1,8 @@
 container_commands:
   01_makemigrations:
     command: "django-admin makemigrations"
-    leader_only: true
   02_migrate:
-    command: "django-admin migrate --fake-initial"
-    leader_only: true
+    command: "django-admin migrate"
   03_show:
     command: "django-admin showmigrations"
 option_settings:
