--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ django-countries = "*"
 django-seed = "*"
 django-dotenv = "*"
 django = "==2.2.5"
+sentry-sdk = "==0.13.2"
 
 [requires]
 python_version = "3.7"
