--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,4 @@ sqlparse==0.3.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3
 text-unidecode==1.3
 psycopg2==2.8.4
 urllib3==1.25.9 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+sentry-sdk==0.13.2
