--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -5,6 +5,10 @@ container_commands:
     command: "django-admin migrate"
   03_show:
     command: "django-admin showmigrations"
+  04_compilemessage:
+    command: "django-admin compilemessages"
+  05_createsu:
+    command: "django-admin createsu"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config/wsgi.py
