--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -9,6 +9,8 @@ container_commands:
     command: "django-admin compilemessages"
   05_createsu:
     command: "django-admin createsu"
+  06_collectstatic:
+    command: "django-admin collectstatic --noinput"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config/wsgi.py
