--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,8 @@ django-seed = "*"
 django-dotenv = "*"
 django = "==2.2.5"
 sentry-sdk = "==0.13.2"
+django-storages = "*"
+boto3 = "*"
 
 [requires]
 python_version = "3.7"
