--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@
 # `Pipfile.lock` and then regenerate `requirements*.txt`.
 ################################################################################
 
+boto3==1.14.5
 beautifulsoup4==4.9.1
 certifi==2020.4.5.2
 chardet==3.0.4
 django-countries==6.1.2
 django-dotenv==1.4.2
 django-seed==0.2.2
+django-storages==1.9.1
 django==2.2.5
 faker==4.1.0 ; python_version >= '3.4'
 idna==2.9 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
