--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -12,7 +12,7 @@ container_commands:
   06_collectstatic:
     command: "django-admin collectstatic --noinput"
   07_seed:
-    command: "django-admin seed_users --number 150 && django-admin seed_facilities --number 10 && django-admin seed_amenities --number 10 && django-admin seed_rooms --number 150"
+    command: "django-admin seed_rooms --number 50"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config/wsgi.py
