--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -7,8 +7,8 @@ container_commands:
     command: "django-admin showmigrations"
   04_compilemessage:
     command: "django-admin compilemessages"
-  05_collectstatic:
-    command: "django-admin collectstatic --noinput"
+  05_seed:
+    command: "django-admin seed_reviews --number 300"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config/wsgi.py
